development-main: bug fixing

--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -1,8 +1,5 @@
 @charset "UTF-8";
-@import "imports/variables";
-@import "imports/mixins";
-@import "imports/partials";
+@import 'resources';
 
 @import 'imports/reboot';
 @import 'imports/typography';
-
