--- a/assets/styles/scss/abstracts/variables/_variables--v1.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v1.scss
@@ -1,10 +1,14 @@
+// -----------------------------------------------------------------------------
+// +  _variables--v1.scss: This partial file contains all Scss 'variables--v1'.
+// -----------------------------------------------------------------------------
+
 //Colors
 
-$accent-color: #C8AC7F;
-$light-blue:#b0c4de;
-$dark-blue:#132636;
-$dark-bg:#0f0e0e;
-$light-bg:#F7F5F5;
+$accent-color: #c8ac7f;
+$light-blue: #b0c4de;
+$dark-blue: #132636;
+$dark-bg: #0f0e0e;
+$light-bg: #f7f5f5;
 
 //Media Queries
 
