--- a/assets/styles/scss/base/_partials.scss
+++ b/assets/styles/scss/base/_partials.scss
@@ -1,3 +1,34 @@
+/* -------------------------------------------------------------------------- *\
+-  CONTAINER CLASSES
+\* -------------------------------------------------------------------------- */
+
+// #  <<<----------<< .main__container >>---------->>
+.main__container > section {
+  min-height: 100vh;
+}
+
+// #  <<<----------<< .inline-flex >>---------->>
+
+.inline-flex {
+  display: inline-flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  place-content: space-evenly;
+  place-items: stretch;
+}
+
+// #  <<<----------<< .flex  >>---------->>
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  place-content: space-evenly;
+  place-items: stretch;
+}
+
+// #  <<<----------<< .container  >>---------->>
+
 .container {
   width: 100%;
   max-width: $site-width-with-padding;
@@ -10,6 +41,10 @@
     padding-right: $s-site-padding;
   }
 }
+
+/* -------------------------------------------------------------------------- *\
+-  TYPOGRAPHY CLASSES
+\* -------------------------------------------------------------------------- */
 
 %font-size-0 {
   font-size: 1.6rem;
