--- a/assets/styles/scss/base/_typography--v2.scss
+++ b/assets/styles/scss/base/_typography--v2.scss
@@ -8,7 +8,7 @@
 
 // #  <h1>
 h1 {
-  padding: $buffer--l $buffer--xs;
+  padding: $buffer--l $buffer--s;
   color: var(--color-primary);
   font-family: $font-family--subject;
   font-size: $font-size--6;
@@ -22,7 +22,7 @@ h1 {
 
 // #  <h2>
 h2 {
-  padding: $buffer--l $buffer--xs;
+  padding: $buffer--l $buffer--s;
   color: var(--color-tertiary);
   font-family: $font-family--section-title;
   font-size: $font-size--5;
@@ -129,7 +129,7 @@ p,
 li,
 blockquote,
 figcaption {
-  padding: $buffer--xxs 0;
+  padding: $buffer--xs 0;
   color: var(--color-foreground);
   font-family: $font-family--text;
   font-size: $font-size--1;
@@ -150,7 +150,7 @@ figcaption {
 // #  <hr>
 hr {
   width: 100%;
-  height: $buffer--xxs;
+  height: $buffer--xs;
   border: 0;
   margin: $buffer--s auto;
   background-image: linear-gradient(
@@ -194,7 +194,7 @@ hr {
 // #  <li>
 
 li {
-  padding: $buffer--xxs 0;
+  padding: $buffer--xs 0;
   list-style-type: none;
 }
 
@@ -208,7 +208,7 @@ li {
 
 a,
 button {
-  padding: $buffer--xxs 0;
+  padding: $buffer--xs 0;
   color: var(--color-primary);
   font-family: $font-family--link;
   font-size: $font-size--2;
@@ -224,7 +224,7 @@ button {
   }
 
   i {
-    margin-right: $buffer--xs;
+    margin-right: $buffer--s;
     text-align: center;
   }
 }
