--- a/assets/styles/scss/waiting-on-migration/components/_button.scss
+++ b/assets/styles/scss/waiting-on-migration/components/_button.scss
@@ -15,18 +15,18 @@ button {
 
   position: relative;
   top: 0;
-  padding: $buffer--xxs;
+  padding: $buffer--xs;
   border-top: 1px solid lightness(var(--color-tertiary), 1.22);
   border-bottom: 1px solid lightness(var(--color-tertiary), 1.2);
-  margin-bottom: calc(#{$buffer--xs} / 2);
-  margin-left: $buffer--xs;
+  margin-bottom: $buffer--s;
+  margin-left: $buffer--s;
   background: linear-gradient(
     to bottom,
     adjust-hsl(var(--color-tertiary), 1, 1.35, 1.15) 0%,
     adjust-hsl(var(--color-tertiary), 1, 1.15, 1.12) 26%,
     adjust-hsl(var(--color-tertiary), 1, 1, 1) 100%
   );
-  border-radius: $border-radius--xs;
+  border-radius: $border-radius--s;
   color: lightness(var(--color-secondary), 0.9);
   text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0.8),
     0 1px 1px lightness(var(--color-secondary), 1.2);
@@ -56,7 +56,7 @@ button {
 
   &::before {
     top: 0;
-    box-shadow: $box-shadow--button---active;
+    box-shadow: $button--box-shadow---active;
   }
 }
 
@@ -73,8 +73,8 @@ button {
     adjust-hsl(var(--color-secondary), 1, 1.15, 0.6) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px
   );
-  border-radius: $border-radius--xs;
-  box-shadow: $box-shadow--button---before;
+  border-radius: $border-radius--s;
+  box-shadow: $button--box-shadow---before;
   content: '';
   transition: all (($button--speed * 1.3) + s) $button--timing-function;
 }
