--- a/assets/styles/scss/waiting-on-migration/components/_card.scss
+++ b/assets/styles/scss/waiting-on-migration/components/_card.scss
@@ -11,18 +11,18 @@
   overflow: hidden;
   min-width: calc(#{$dimension--xxs} - (#{$dimension--xxs} / 10));
   max-width: calc((#{$dimension--l} / 4));
-  aspect-ratio: $card-aspect-ratio;
-  // height: $card-height;
+  aspect-ratio: $card--aspect-ratio;
+  // height: $card--height;
 
   /* Prevent background color leak outs */
   background-clip: padding-box;
   border-radius: $border-radius--s;
 
   @include breakpoint(xs) {
-    min-width: $card-width;
-    height: $card-height;
-    max-height: $card-height;
-    aspect-ratio: $card-aspect-ratio;
+    min-width: $card--width;
+    height: $card--height;
+    max-height: $card--height;
+    aspect-ratio: $card--aspect-ratio;
   }
 
   &:hover {
