--- a/assets/styles/scss/waiting-on-migration/layout/_footer.scss
+++ b/assets/styles/scss/waiting-on-migration/layout/_footer.scss
@@ -22,7 +22,7 @@
       }
 
       &__title {
-        padding: $buffer--s 0;
+        padding: $buffer--m 0;
         // ...
       }
 
@@ -42,7 +42,7 @@
       }
 
       &__title {
-        padding: $buffer--s 0;
+        padding: $buffer--m 0;
         // ...
       }
 
@@ -69,7 +69,7 @@
       // ...
       &__container {
         flex-direction: row;
-        padding: $buffer--xs;
+        padding: $buffer--s;
 
         @include breakpoint(xs) {
           @include flex-items(2);
@@ -89,7 +89,7 @@
       &__container {
         flex-direction: row;
         justify-content: space-around;
-        padding: $buffer--xs;
+        padding: $buffer--s;
 
         @include breakpoint(xs) {
           @include flex-items(8);
