--- a/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-2--hot-items.scss
+++ b/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-2--hot-items.scss
@@ -13,12 +13,12 @@
   }
 
   &__title {
-    // padding: $buffer--l 0 $buffer--xs 0;
+    // padding: $buffer--l 0 $buffer--s 0;
   }
 }
 
 .hot-item {
-  padding: 0 $buffer--xs $buffer--xxl $buffer--xs;
+  padding: 0 $buffer--s $buffer--xxl $buffer--s;
 
   &__container {
     position: relative;
@@ -32,7 +32,7 @@
     top: 0;
     right: 0;
     left: 0;
-    padding: $buffer--s;
+    padding: $buffer--m;
     font-variant: normal;
     font-weight: $font-weight--subject;
   }
@@ -51,11 +51,11 @@
     position: absolute;
     z-index: 1;
     right: 0;
-    bottom: calc(-#{$buffer--xxl} * 3 - (#{$buffer--xs}));
+    bottom: calc(-#{$buffer--xxl} * 3 - (#{$buffer--s}));
     left: 0;
-    padding: $buffer--s;
+    padding: $buffer--m;
     background-color: $bg-color--transparant-black---level-3;
-    box-shadow: $box-shadow--caption---slide-in;
+    box-shadow: $caption--box-shadow---slide-in;
   }
 
   &__caption-title {
@@ -69,7 +69,7 @@
   &__caption-text {
     overflow: auto;
     height: calc(#{$buffer--xxl} * 2);
-    margin: $buffer--s 0;
+    margin: $buffer--m 0;
     color: var(--color-background);
   }
 
@@ -100,7 +100,7 @@
       &__caption {
         bottom: 0%;
         background-color: $bg-color--transparant-black---level-5;
-        box-shadow: $box-shadow--caption---slide-out;
+        box-shadow: $caption--box-shadow---slide-out;
       }
 
       &__title {
