--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 // -----------------------------------------------------------------------------
-// +  <<--------------------<< LAYOUT >>-------------------->>
+// +  <<<--------------------<<< LAYOUT >>>-------------------->>>
 // -----------------------------------------------------------------------------
 
 // -----------------------------------------------------------------------------
@@ -50,7 +50,7 @@ $border-radius--xl: 48px;
 $border-radius--xxl: 64px;
 
 // -----------------------------------------------------------------------------
-// +  TYPOGRAPHY
+// +  TYPOGRAPHY >>>-------------------->>>
 // -----------------------------------------------------------------------------
 
 // *  <<----------<< RFS >>---------->>
