--- a/assets/styles/scss/waiting-on-migration/layout/_footer.scss
+++ b/assets/styles/scss/waiting-on-migration/layout/_footer.scss
@@ -62,7 +62,7 @@
 
   &__container--contact {
     @include breakpoint(xs) {
-      @include block-flex-container(nowrap, row, space-evenly, center);
+      @include flex-container(nowrap, row, space-evenly, center);
     }
 
     .foot-copyright {
