--- a/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-3--about.scss
+++ b/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-3--about.scss
@@ -6,10 +6,10 @@
   background: radial-gradient(#003, #000);
 
   &__container {
-    @include block-flex-container(nowrap, column, center, center);
+    @include flex-container(nowrap, column, center, center);
 
     @include breakpoint(s) {
-      @include block-flex-container(wrap, row, space-evenly, stretch);
+      @include flex-container(wrap, row, space-evenly, stretch);
     }
   }
 
