--- a/assets/styles/scss/waiting-on-migration/components/_button.scss
+++ b/assets/styles/scss/waiting-on-migration/components/_button.scss
@@ -11,7 +11,7 @@ button {
 // -  <<----------<< Specific >>---------->>
 
 .btn {
-  @include block-flex-container;
+  @include flex-container;
 
   position: relative;
   top: 0;
@@ -84,6 +84,6 @@ button {
 }
 
 .btn--icon {
-  @include dimensions(btn, $font-size--3);
+  @include box-dimensions(btn, $font-size--3);
   @include flex-items;
 }
